# mcp-client-test

./: README.md  pyproject.toml
src/mcp_openai/: README.md  openai_agent.py  openai_tools.py  run.py
