[project]
name = "mcp-client-test"
version = "0.1.0"
description = "A sample project that builds MCP clients with OpenAI or other LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.57.0",
    "mcp>=1.1.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = [
  "src/mcp_openai",
]
